fixed workstation jumps during animation

--- a/assets/styles/atc.css
+++ b/assets/styles/atc.css
@@ -55,7 +55,7 @@
           align-items: center;
   width: 100%;
   min-height: 40px;
-  max-height: 80px;
+  max-height: 70px;
   height: 8vh;
   border-radius: 10px;
   border: 2px solid #150C21;
@@ -1353,14 +1353,20 @@ section#workstation > div:first-child img {
 
 @media only screen and (min-width: 768px) {
   section#workstation > div:first-child img {
-    margin-bottom: 5%;
-    margin-left: 10%;
-    margin-right: 0;
+    margin: -10% 0 5% 10%;
+    padding-bottom: 10%;
     z-index: 1;
     min-width: 30%;
     width: 35%;
     -webkit-transform: translateY(-20%);
             transform: translateY(-20%);
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  section#workstation > div:first-child img {
+    padding-bottom: 20%;
+    margin: -20% 0 5% 10%;
   }
 }
 
