--- a/assets/styles/modules/_classes.scss
+++ b/assets/styles/modules/_classes.scss
@@ -40,7 +40,7 @@
   align-items: center;
   width: 100%;
   min-height: 40px;
-  max-height: 80px;
+  max-height: 70px;
   height: 4 * $paddingHeight;
   border-radius: $borderRadius;
   border: 2px solid $black;
