--- a/assets/styles/partial/_body.scss
+++ b/assets/styles/partial/_body.scss
@@ -234,13 +234,17 @@ section {
         img {
           image-rendering: pixelated;
           @include media($tablet) {
-            margin-bottom: 5%;
-            margin-left: 10%;
-            margin-right: 0;
+            margin: -10% 0 5% 10%;
+            padding-bottom: 10%;
             z-index: 1;
             min-width: 30%;
             width: 35%;
             transform: translateY(-20%);
+          }
+          @include media($laptop){
+            padding-bottom: 20%;
+            margin: -20% 0 5% 10%;
+
           }
           @include media(1200px) {
             transform: translateY(-30%);
